{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 56,
  "lineage": "9c226b94-eaaf-9a04-cfce-f670aee70944",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mwaa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:security-group/sg-08104cfb37e2b07f0",
            "description": "Security group for MWAA environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08104cfb37e2b07f0",
            "ingress": [],
            "name": "mwaa-sg",
            "name_prefix": "",
            "owner_id": "779846818770",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mwaa",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mwaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:security-group/sg-0bf452a6dcdeecd5a",
            "description": "Security group for MWAA environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Amazon MWAA outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf452a6dcdeecd5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Amazon MWAA inbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mwaa-20250531132434329300000001",
            "name_prefix": "mwaa-",
            "owner_id": "779846818770",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.mwaa",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mwaa_sg_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Amazon MWAA inbound access",
            "from_port": 0,
            "id": "sgrule-4165053347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bf452a6dcdeecd5a",
            "security_group_rule_id": "sgr-0945183c2c4eae2e8",
            "self": false,
            "source_security_group_id": "sg-0bf452a6dcdeecd5a",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mwaa.aws_security_group.mwaa",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mwaa",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mwaa_sg_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Amazon MWAA outbound access",
            "from_port": 0,
            "id": "sgrule-2505414397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bf452a6dcdeecd5a",
            "security_group_rule_id": "sgr-0d0b4de51c58c1a18",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mwaa.aws_security_group.mwaa",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:network-acl/acl-029daba448ca97ea6",
            "default_network_acl_id": "acl-029daba448ca97ea6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-029daba448ca97ea6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "779846818770",
            "subnet_ids": [
              "subnet-02e2c7210357a5857",
              "subnet-059272470d277e580"
            ],
            "tags": {
              "Name": "mwaa-vpc-default"
            },
            "tags_all": {
              "Name": "mwaa-vpc-default"
            },
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:route-table/rtb-05ed5f2b4800441b1",
            "default_route_table_id": "rtb-05ed5f2b4800441b1",
            "id": "rtb-05ed5f2b4800441b1",
            "owner_id": "779846818770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mwaa-vpc-default"
            },
            "tags_all": {
              "Name": "mwaa-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:security-group/sg-0b23f3e638d3c7581",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b23f3e638d3c7581",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "779846818770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mwaa-vpc-default"
            },
            "tags_all": {
              "Name": "mwaa-vpc-default"
            },
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:route-table/rtb-043070a5cc1889fc6",
            "id": "rtb-043070a5cc1889fc6",
            "owner_id": "779846818770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mwaa-vpc-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "mwaa-vpc-private-eu-north-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:route-table/rtb-041c9c2f0c9f38c24",
            "id": "rtb-041c9c2f0c9f38c24",
            "owner_id": "779846818770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mwaa-vpc-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "mwaa-vpc-private-eu-north-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0fb959c371628c3",
            "route_table_id": "rtb-043070a5cc1889fc6",
            "subnet_id": "subnet-02e2c7210357a5857"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c507d7c82291ab43",
            "route_table_id": "rtb-041c9c2f0c9f38c24",
            "subnet_id": "subnet-059272470d277e580"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:subnet/subnet-02e2c7210357a5857",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e2c7210357a5857",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779846818770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-vpc-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "mwaa-vpc-private-eu-north-1a"
            },
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:subnet/subnet-059272470d277e580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059272470d277e580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779846818770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mwaa-vpc-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "mwaa-vpc-private-eu-north-1b"
            },
            "vpc_id": "vpc-000207c95a31a4ffe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:779846818770:vpc/vpc-000207c95a31a4ffe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029daba448ca97ea6",
            "default_route_table_id": "rtb-05ed5f2b4800441b1",
            "default_security_group_id": "sg-0b23f3e638d3c7581",
            "dhcp_options_id": "dopt-06da9f8d0698754b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000207c95a31a4ffe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ed5f2b4800441b1",
            "owner_id": "779846818770",
            "tags": {
              "Name": "mwaa-vpc"
            },
            "tags_all": {
              "Name": "mwaa-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}